--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.4.3"
+    "mongoose": "^6.4.3",
+    "nodemon": "^2.0.19"
   },
   "name": "recipes-backend",
   "version": "1.0.0",
