--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "recipes app rest api",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
